Changes by Aman on dashboard Multiple actions cases on meeting pages Changes by avinash for search by enter tab

--- a/WTO/Views/Partial/Dashboard/DashboardHSCode.cshtml
+++ b/WTO/Views/Partial/Dashboard/DashboardHSCode.cshtml
@@ -19,7 +19,7 @@
     </div>
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12" id="divHSCode">   
-                @{int i = 0; }
+                @*@{int i = 0; }
                 @foreach (BusinessObjects.Notification.HSCodeGraphData ac in Model)
                 {
                     if (i % 3 == 0)
@@ -41,7 +41,7 @@
                         @Html.Raw("</div>")
                     }
                     i++;
-                }
+                }*@
 </div>
     </div>
 </div>
