--- a/WTO/Views/Partial/ManageAccess/InternalStackHolders.cshtml
+++ b/WTO/Views/Partial/ManageAccess/InternalStackHolders.cshtml
@@ -145,6 +145,7 @@
     
         $(".defaultdiv").bind('keydown', function (e) {
             if (e.which === 13) {
+                $(".doAction").click();
                 $(this).find(".searchbtndiv").click();
                 return false;
             }
