--- a/WTO/Views/Partial/ManageAccess/StakeHolder.cshtml
+++ b/WTO/Views/Partial/ManageAccess/StakeHolder.cshtml
@@ -11,12 +11,13 @@
             <table class="table table-bordered table-fixed">
                 <thead class="second-blackbackground">
                     <tr>
-                        @*<th>S.No</th>*@
+                        @*<th>S.No</th>
+                        *@
                         <th class="col-xs-3">Stakeholder Name</th>
                         <th class="col-xs-6">Email Id</th>
-                        <th class="col-xs-1">Status</th>
-                        <th class="text-center col-xs-1">Edit</th>
-                        <th class="text-center col-xs-1">Delete</th>
+                        <th class="col-xs-1 padding-right-20">Status</th>
+                        <th class="col-xs-1 padding-right-20">Edit</th>
+                        <th class="col-xs-1 padding-right-20">Delete</th>
                     </tr>
                 </thead>
                 <tbody class="whitebackground">
@@ -25,21 +26,22 @@
                         foreach (var item in @Model.StakeHolderList)
                         {
                             <tr>
-                                @*<td>@item.ItemNumber</td>*@
+                                @*<td>@item.ItemNumber</td>
+                                *@
                                 <td class="col-xs-3">@item.StakeHolderName</td>
                                 <td class="col-xs-6">@item.Email</td>
                                 @if (@item.Status == 1)
                                 {
-                                    <td class="col-xs-1">Active</td>
+                                    <td class="col-xs-1 text-right">Active</td>
                                 }
                                 else
                                 {
-                                    <td class="col-xs-1">Inactive</td>
+                                    <td class="col-xs-1 text-right">Inactive</td>
                                 }
-                                <td class="text-center col-xs-1"><a href="#" onclick="EditStakeHolderData(@item.StakeHolderId);"><span class="glyphicon glyphicon-edit"></span></a></td>
-                                <td class="text-center col-xs-1"><a href="#" class='@(@item.IsInUse ? "hidden" : "")' onclick="Confirm('Delete','Do you want to delete the @item.StakeHolderName ?','Yes', 'No', 'DeleteStakeHolder(@item.StakeHolderId)');"><span class="glyphicon glyphicon-trash"></span></a></td>
+                                <td class="textright col-xs-1"><a href="#" onclick="EditStakeHolderData(@item.StakeHolderId);"><span class="glyphicon glyphicon-edit"></span></a></td>
+                                <td class="textright col-xs-1"><a href="#" class='@(@item.IsInUse ? "hidden" : "")' onclick="Confirm('Delete','Do you want to delete the @item.StakeHolderName ?','Yes', 'No', 'DeleteStakeHolder(@item.StakeHolderId)');"><span class="glyphicon glyphicon-trash"></span></a></td>
                             </tr>
-                        }
+                    }
                     }
                     else
                     {
@@ -58,7 +60,7 @@
 
 <div class="modal fade selecthrmodal" id="AddStakeholder" role="dialog" data-backdrop="static" data-keyboard="false">
     <div class="modal-dialog selecthrdialog">
-        <div class="modal-content selecthrcontent" style="height:auto;">
+        <div class="modal-content selecthrcontent" style="height: auto;">
             <div class="modal-header selecthrheader">
                 <button type="button" class="close selecthrclose" data-dismiss="modal">
                     <span class="glyphicon glyphicon-remove"></span>
@@ -108,34 +110,35 @@
                                     </div>
                                 </div>
                                 @*<div class="form-group">
-                                        <label class="control-label col-sm-3">Address<sup class="mandetory">*</sup>:</label>
-                                        <div class="col-sm-9">
-                                            <textarea id="stackholderAddress" class="form-control" cols="30" rows="2" maxlength="1000"></textarea>
-                                        </div>
+                                    <label class="control-label col-sm-3">Address<sup class="mandetory">*</sup>:</label>
+                                    <div class="col-sm-9">
+                                        <textarea id="stackholderAddress" class="form-control" cols="30" rows="2" maxlength="1000"></textarea>
                                     </div>
-                                    <div class="form-group">
-                                        <label class="control-label col-sm-3">State<sup class="mandetory">*</sup>:</label>
-                                        <div class="col-sm-9">
-                                            <input type="text" class="form-control" id="stackholderState" maxlength="20" onkeypress="return isAlpha(event);">
-                                        </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="control-label col-sm-3">State<sup class="mandetory">*</sup>:</label>
+                                    <div class="col-sm-9">
+                                        <input type="text" class="form-control" id="stackholderState" maxlength="20" onkeypress="return isAlpha(event);">
                                     </div>
+                                </div>
 
-                                    <div class="col-sm-6">
-                                        <div class="form-group">
-                                            <label class="control-label col-sm-5 padding-0">City<sup class="mandetory">*</sup>:</label>
-                                            <div class="col-sm-7">
-                                                <input type="text" class="form-control" id="stackholderCity" maxlength="20" onkeypress="return isAlpha(event);" style="margin-left:12px;">
-                                            </div>
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <label class="control-label col-sm-5 padding-0">City<sup class="mandetory">*</sup>:</label>
+                                        <div class="col-sm-7">
+                                            <input type="text" class="form-control" id="stackholderCity" maxlength="20" onkeypress="return isAlpha(event);" style="margin-left: 12px;">
                                         </div>
                                     </div>
-                                    <div class="col-sm-6">
-                                        <div class="form-group">
-                                            <label class="control-label col-sm-5">PIN<sup class="mandetory">*</sup>:</label>
-                                            <div class="col-sm-7">
-                                                <input type="text" class="form-control" id="stackholderPIN" maxlength="6" onkeypress="return isNumeric(event);" style="margin-left:12px;">
-                                            </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <label class="control-label col-sm-5">PIN<sup class="mandetory">*</sup>:</label>
+                                        <div class="col-sm-7">
+                                            <input type="text" class="form-control" id="stackholderPIN" maxlength="6" onkeypress="return isNumeric(event);" style="margin-left: 12px;">
                                         </div>
-                                    </div>*@
+                                    </div>
+                                </div>
+                                *@
 
 
                                 <div class="form-group">
@@ -175,7 +178,7 @@
 
 <input type="hidden" id="hdnstakeholderHscode" class="form-control">
 
-<div class="modal fade selecthrmodal" id="selectstakeholderHscode" role="dialog" data-backdrop="static" data-keyboard="false">
+<div class="modal fade selecthrmodal " id="selectstakeholderHscode" role="dialog" data-backdrop="static" data-keyboard="false">
     <div class="modal-dialog modal-lg selecthrdialog">
         <!-- Modal content-->
         <div class="modal-content selecthrcontent">
@@ -205,7 +208,7 @@
                             <div class="col-xs-12 col-sm-6 col-md-4 ">
                                 <div class="row">
                                     <div class="col-xs-6 col-sm-6 col-md-6">
-                                        <a href="#" class="btn btn-light-blue btn-block" onclick="SelectHSCode();">Select</a>
+                                        <a href="#" class="btn btn-light-blue btn-block selectbtn" onclick="SelectHSCode();">Select</a>
                                     </div>
                                     <div class="col-xs-6 col-sm-6 col-md-6">
                                         <a href="#" class="btn btn-red btn-block" onclick="openAddStakeholder();">Close</a>
@@ -243,8 +246,8 @@
 
 
         $(".defaultdiv").bind('keydown', function (e) {
-            debugger;
             if (e.which === 13) {
+                $(".doAction").click();
                 $(this).find(".searchbtndiv").click();
                 return false;
             }
