--- a/WTO/Views/Partial/ManageAccess/Translator.cshtml
+++ b/WTO/Views/Partial/ManageAccess/Translator.cshtml
@@ -16,10 +16,10 @@
                         <th class="col-sm-2">Languages</th>
                         <th class="col-sm-2">Email Id</th>
                         <th class="col-sm-1">Phone</th>
-                        <th class="col-sm-1">Status</th>
-                        <th class="col-sm-1"></th>
-                        <th class="text-center col-sm-1">Edit</th>
-                        <th class="text-center col-sm-1">Delete</th>
+                        <th class="col-sm-1 padding-right-20">Status</th>
+                        <th class="col-sm-1 text-center"></th>
+                        <th class="padding-right-20 col-sm-1">Edit</th>
+                        <th class="padding-right-20 col-sm-1">Delete</th>
                     </tr>
                 </thead>
                 <tbody class="whitebackground">
@@ -35,22 +35,22 @@
                                 <td class="col-sm-1">@item.Mobile</td>
                                 @if (@item.Status == 1)
                                 {
-                                    <td class="col-sm-1">Active</td>
+                                    <td class="col-sm-1 textright">Active</td>
                                 }
                                 else
                                 {
-                                    <td class="col-sm-1">Inactive</td>
+                                    <td class="col-sm-1 textright">Inactive</td>
                                 }
                                 @if (!@item.IsWelcomeMailSent)
                                 {
-                                    <td class="col-sm-1"><a style="cursor:pointer;" onclick="Confirm('Send Mail','Do you want to send welcome mail to @item.TranslatorName ?','Yes', 'No', 'SendWelcomeMail(@item.TranslatorId)');"><img src="~/contents/img/message.png" alt="message" /></a></td>
+                                    <td class="col-sm-1 text-center"><a style="cursor:pointer;" onclick="Confirm('Send Mail','Do you want to send welcome mail to @item.TranslatorName ?','Yes', 'No', 'SendWelcomeMail(@item.TranslatorId)');"><img src="~/contents/img/message.png" alt="message" /></a></td>
                                 }
                                 else
                                 {
-                                    <td class="col-sm-1"></td>
+                                    <td class="col-sm-1 text-center"></td>
                                 }
-                                <td class="text-center col-sm-1"><a href="#" onclick="EditTranslatorData(@item.TranslatorId);"><span class="glyphicon glyphicon-edit"></span></a></td>
-                                <td class="text-center col-sm-1"><a href="#" class='@(@item.IsInUse? "hidden":"")' onclick="Confirm('Delete','Do you want to delete the @item.TranslatorName?','Yes', 'No', 'DeleteTranslator(@item.TranslatorId)');"><span class="glyphicon glyphicon-trash"></span></a></td>
+                                <td class="textright col-sm-1"><a href="#" onclick="EditTranslatorData(@item.TranslatorId);"><span class="glyphicon glyphicon-edit"></span></a></td>
+                                <td class="textright col-sm-1"><a href="#" class='@(@item.IsInUse? "hidden":"")' onclick="Confirm('Delete','Do you want to delete the @item.TranslatorName?','Yes', 'No', 'DeleteTranslator(@item.TranslatorId)');"><span class="glyphicon glyphicon-trash"></span></a></td>
                             </tr>
                         }
                     }
@@ -167,6 +167,7 @@
         
         $(".defaultdiv").bind('keydown', function (e) {
             if (e.which === 13) {
+                $(".doAction").click();
                 $(this).find(".searchbtndiv").click();
                 return false;
             }
