--- a/WTO/Views/WTO/ManageAccess.cshtml
+++ b/WTO/Views/WTO/ManageAccess.cshtml
@@ -99,7 +99,7 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-12 col-md-12">
                         <div class="col-xs-12 col-sm-12 col-md-12 selecthrbodyinner">
-                            <form class="form-horizontal top-offset-20">
+                            <form class="form-horizontal top-offset-20 defaultdiv">
                                 <div class="form-group">
                                     <label class="control-label col-sm-5">Country Code<sup class="mandetory">*</sup>:</label>
                                     <div class="col-sm-7">
@@ -139,7 +139,7 @@
                                     <div class="col-sm-offset-5 col-sm-7">
                                         <div class="row">
                                             <div class="col-sm-6">
-                                                <a href="#" class="btn btn-dark-green btn-block btn-padding bottom-offset-10" onclick="CountryValidation();">Save</a>
+                                                <a href="#" class="btn btn-dark-green btn-block btn-padding bottom-offset-10 searchbtndiv" onclick="CountryValidation();">Save</a>
                                             </div>
                                             <div class="col-sm-6">
                                                 <a href="#" class="btn btn-red btn-block btn-padding bottom-offset-10" data-dismiss="modal">Close</a>
@@ -157,3 +157,14 @@
 </div>
 
 <!-- Add Country modal popup -->
+<script type="text/javascript">
+    $(document).ready(function () {
+        $(".defaultdiv").bind('keydown', function (e) {
+            if (e.which === 13) {
+                $(".doAction").click();
+                $(this).find(".searchbtndiv").click();
+                return false;
+            }
+        });
+    });
+</script>
